--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
-h1 {
-  color: blueviolet;
+.body {
+  background-color: #1ec7c8;
+  color: white;
+}
+
+li {
+  list-style: none;
+}
+
+.features-list__image,
+.features-list__description {
+  display: table-cell;
+  vertical-align: top;
+  box-sizing: border-box;
+}
+* {
+  box-sizing: border-box;
+}
+.wrapper {
+  margin-left: calc(10% - 10px);
+  margin-right: calc(10% - 10px);
+  max-width: 1210px;
 }
