--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: #1ec7c8;
   color: white;
   text-align: center;
+  font-family: "Mukta", sans-serif;
 }
 
 h1 {
@@ -12,10 +13,12 @@ h1 {
 h2 {
   text-transform: uppercase;
   font-size: 15px;
+  letter-spacing: 0.2rem;
 }
 
 p {
   line-height: 1.5;
+  font-weight: lighter;
 }
 
 input {
@@ -58,7 +61,7 @@ button:hover {
 }
 
 ul {
-  padding: 0;
+  padding: none;
   margin-top: 20px;
 }
 li {
@@ -88,7 +91,7 @@ hr {
 
 .features-list_header {
   color: #1ec7c8;
-  line-height: 2;
+  line-height: 10;
 }
 
 .features-list_content {
@@ -96,10 +99,14 @@ hr {
   margin-bottom: 50px;
 }
 
-.features-list_image,
-.features-list_description {
+.features-list_image {
   display: table-cell;
   vertical-align: top;
+  box-sizing: border-box;
+}
+
+.features-list_description {
+  display: table-cell;
   box-sizing: border-box;
 }
 .features-list_item {
