--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,9 @@ button:hover {
 }
 
 ul {
-  padding: none;
+  padding: 0;
   margin-top: 20px;
+  margin-left: 0;
 }
 li {
   list-style: none;
@@ -74,13 +75,14 @@ li {
 
 hr {
   color: #1ec7c8;
-  font-weight: bold;
+  border-width: 1px;
+  display: block;
 }
 
 .suelo_logo {
   display: block;
   margin: 0 auto;
-  margin-top: -10px;
+  top: -15px;
   max-width: 20%;
 }
 
@@ -91,18 +93,11 @@ hr {
 
 .features-list_header {
   color: #1ec7c8;
-  line-height: 10;
 }
 
 .features-list_content {
   color: #abacb2;
-  margin-bottom: 50px;
-}
-
-.features-list_image {
-  display: table-cell;
-  vertical-align: top;
-  box-sizing: border-box;
+  margin-bottom: 100px;
 }
 
 .features-list_description {
@@ -116,6 +111,26 @@ hr {
 }
 
 .testimony_image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100%;
+  box-sizing: border-box;
+  display: block;
+  width: 75%;
+}
+
+.testimony_right {
+  padding: 4.6875rem;
+  box-sizing: border-box;
+  display: block;
+  font-size: 1em;
+}
+
+.main-footer_middle {
+  text-align: center;
+}
+.bottom_logo {
+  max-width: 20%;
   float: left;
-  margin: 0 auto;
 }
